generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model sections {
  id     Int      @id @default(autoincrement())
  nama   String
  slug   String?
  levels levels[]
}

model levels {
  id         Int        @id @default(autoincrement())
  id_section Int
  nama       String
  deskripsi  String?
  urutan     Int?
  attempts   attempts[]
  sections   sections   @relation(fields: [id_section], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "levels_section_fk")
  soals      soals[]

  @@index([id_section])
}

model pelajars {
  id             Int              @id @default(autoincrement())
  nama           String
  username       String
  password       String
  xp             Int              @default(0)
  level_rank     Int              @default(1)
  attempts       attempts[]
  pelajar_badges pelajar_badges[]
}

model attempts {
  id            Int            @id @default(autoincrement())
  id_level      Int
  id_pelajar    Int
  skor          Float
  created_at    DateTime       @default(now())
  levels        levels         @relation(fields: [id_level], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "attempts_level_fk")
  pelajars      pelajars       @relation(fields: [id_pelajar], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "attempts_pelajar_fk")
  jawaban_esais jawabanEsais[]
  jawaban_pgs   jawabanPGs[]

  @@index([id_level])
  @@index([id_pelajar])
}

model soals {
  id            Int            @id @default(autoincrement())
  id_level      Int
  tipe          Tipe
  text_soal     String
  kata_kunci    String?
  jawaban_esais jawabanEsais[]
  opsis         opsis[]
  levels        levels         @relation(fields: [id_level], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "soals_level_fk")

  @@index([id_level])
}

model opsis {
  id          Int          @id @default(autoincrement())
  id_soal     Int
  text_opsi   String
  is_correct  Boolean
  jawaban_pgs jawabanPGs[]
  soals       soals        @relation(fields: [id_soal], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "opsis_soal_fk")

  @@index([id_soal])
}

model admins {
  id            Int            @id @default(autoincrement())
  nama          String
  username      String
  password      String
  jawaban_esais jawabanEsais[]
}

model jawabanEsais {
  id                Int      @id @default(autoincrement())
  id_soal           Int
  id_attempt        Int
  id_admin          Int?
  text_jawaban_esai String
  skor              Float
  feedback          String?
  admins            admins?  @relation(fields: [id_admin], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "jawaban_esais_admin_fk")
  attempts          attempts @relation(fields: [id_attempt], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "jawaban_esais_attempt_fk")
  soals             soals    @relation(fields: [id_soal], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "jawaban_esais_soal_fk")

  @@unique([id_attempt, id_soal])
  @@index([id_soal], map: "jawaban_esais_id_soal_idx")
  @@index([id_attempt], map: "jawaban_esais_id_attempt_idx")
  @@index([id_admin], map: "jawaban_esais_id_admin_idx")
}

model jawabanPGs {
  id         Int      @id @default(autoincrement())
  id_attempt Int
  id_opsi    Int
  skor       Float
  attempts   attempts @relation(fields: [id_attempt], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "jawaban_pgs_attempt_fk")
  opsis      opsis    @relation(fields: [id_opsi], references: [id], onDelete: Cascade, onUpdate: Restrict, map: "jawaban_pgs_opsi_fk")

  @@unique([id_attempt, id_opsi])
  @@index([id_attempt], map: "jawaban_pgs_id_attempt_idx")
  @@index([id_opsi], map: "jawaban_pgs_id_opsi_idx")
}

enum Tipe {
  pg
  esai
}

model badges {
  id             Int              @id @default(autoincrement())
  name           String           @unique
  description    String
  criteria_type  String
  pelajar_badges pelajar_badges[]
}

model pelajar_badges {
  id          Int      @id @default(autoincrement())
  id_pelajar  Int
  id_badge    Int
  obtained_at DateTime @default(now())
  pelajars    pelajars @relation(fields: [id_pelajar], references: [id], onDelete: Cascade)
  badges      badges   @relation(fields: [id_badge], references: [id], onDelete: Cascade)

  @@unique([id_pelajar, id_badge])
  @@index([id_pelajar])
}
